pages added journey 3

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -108,7 +108,7 @@
                  </details>
                  <hr>
                  <h3 class="nhsuk-heading-m">Hypothesis A</h3>
-                 <p style="background: #DEE0E2; padding: 20px;"><strong>We believe</strong> that allowing users to continue their application whether they have matched on all children or not <strong>will be a useful for</strong> any user who is not able to get an instant match <strong>as it will</strong> allow them to complete the application online and provide evidence to support their application <strong>this will</strong> reduce the calls to the call centre and support the partial matching of children due to the 2 child rule Universal Credit have.
+                 <p style="background: #DEE0E2; padding: 20px;">We are going to be testing this prototype with users. The design has been updated to be inline with GDS as well as the content which has been review by the content designer on our team.
                  </p>
                  
                  
@@ -145,7 +145,7 @@
                  </details>
                  <hr>
                  <h3 class="nhsuk-heading-m">Hypothesis A</h3>
-                 <p style="background: #DEE0E2; padding: 20px;"><strong>We believe</strong> that allowing users to continue their application whether they have matched on all children or not <strong>will be a useful for</strong> any user who is not able to get an instant match <strong>as it will</strong> allow them to complete the application online and provide evidence to support their application <strong>this will</strong> reduce the calls to the call centre and support the partial matching of children due to the 2 child rule Universal Credit have.
+                 <p style="background: #DEE0E2; padding: 20px;"> 
                  </p>
                  
                  
