--- a/app/views/v3/date-of-birth.html
+++ b/app/views/v3/date-of-birth.html
@@ -18,37 +18,37 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/v2/enter-postcode" method="post" class="form">
+      <form action="/v3/enter-postcode" method="post" class="form">
 
 
         <h2>What your date of birth?</h2>
         <div class="nhsuk-hint" id="example-hint">
-          For example, 15 3 1984
+          For example, 31 3 1980
         </div>
     
         <div class="nhsuk-date-input" id="example">
           <div class="nhsuk-date-input__item">
             <div class="nhsuk-form-group">
-              <label class="nhsuk-label nhsuk-date-input__label" for="example-day">
+              <label class="nhsuk-label nhsuk-date-input__label" for="day">
                 Day
               </label>
-              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="example-day" name="example-day" type="text" pattern="[0-9]*" inputmode="numeric">
+              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="day" name="day" type="text" pattern="[0-9]*" inputmode="numeric">
             </div>
           </div>
           <div class="nhsuk-date-input__item">
             <div class="nhsuk-form-group">
-              <label class="nhsuk-label nhsuk-date-input__label" for="example-month">
+              <label class="nhsuk-label nhsuk-date-input__label" for="month">
                 Month
               </label>
-              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="example-month" name="example-month" type="text" pattern="[0-9]*" inputmode="numeric">
+              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="month" name="month" type="text" pattern="[0-9]*" inputmode="numeric">
             </div>
           </div>
           <div class="nhsuk-date-input__item">
             <div class="nhsuk-form-group">
-              <label class="nhsuk-label nhsuk-date-input__label" for="example-year">
+              <label class="nhsuk-label nhsuk-date-input__label" for="year">
                 Year
               </label>
-              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="example-year" name="example-year" type="text" pattern="[0-9]*" inputmode="numeric">
+              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="year" name="year" type="text" pattern="[0-9]*" inputmode="numeric">
             </div>
           </div>
         
