--- a/app/views/v3/enter-reference-number-again.html
+++ b/app/views/v3/enter-reference-number-again.html
@@ -18,26 +18,21 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/v1/what-is-dob" method="post" class="form">
+      <form action="/v3/what-is-dob" method="post" class="form">
 
 
         <h2>Enter your reference number again</h2>
         <div class="nhsuk-form-group">
           <label class="nhsuk-label" for="one-half">
             <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              We need to make sure we find the correct record
+              We ask this to make sure we find the correct record.
             </div>
           </label>
           <input class="nhsuk-input nhsuk-u-width-one-half" id="one-half" name="one-half" type="text">
         </div>
-
-        {{ button({
-          "text": "Continue",
-          "id": "btn_submit"
-        }) }}
-
-       
-
+        <a href="/v3/date-of-birth" class="nhsuk-button">
+          Continue
+        </a>
       </form>
 
     </div>
