--- a/app/views/v3/enter-reference-number.html
+++ b/app/views/v3/enter-reference-number.html
@@ -30,12 +30,9 @@
           </label>
           <input class="nhsuk-input nhsuk-u-width-one-half" id="one-half" name="one-half" type="text">
         </div>
-
-        {{ button({
-          "text": "Continue",
-          "id": "btn_submit"
-        }) }}
-
+        <a href="/v3/enter-reference-number-again" class="nhsuk-button">
+          Continue
+        </a>
        </form>
 
     </div>
