--- a/app/views/v3/enter-postcode.html
+++ b/app/views/v3/enter-postcode.html
@@ -18,10 +18,10 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/v1/reference-number-again" method="post" class="form">
+      <form action="/v3/" method="post" class="form">
 
 
-        <h2>Enter your postcode as shown on your letter</h2>
+        <h1>Enter your postcode as shown on your letter</h1>
         <div class="nhsuk-form-group">
           <label class="nhsuk-label" for="one-half">
             <div class="nhsuk-hint" id="example-with-hint-text-hint">
