--- a/app/views/v2/enter-postcode.html
+++ b/app/views/v2/enter-postcode.html
@@ -28,7 +28,7 @@
               For example WA4 1AB
             </div>
           </label>
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="postcode-input" name="postcode" type="text">
+          <input class="nhsuk-input nhsuk-u-width-one-half" id="postcode-input-first" name="postcode-first" type="text">
         </div>
 
         {{ button({
