--- a/app/views/v3/exemption-certificate-number.html
+++ b/app/views/v3/exemption-certificate-number.html
@@ -48,22 +48,40 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/v3/what-is-dob" method="post" class="form">
+      <form action="cert-number" method="get" class="form">
 
-        <span class="nhsuk-caption-l">Your details</span>
-        <h1>Enter your reference number again</h1>
+        <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h1>Do you know your [Benefit] number?</h1>
         <div class="nhsuk-form-group">
           <label class="nhsuk-label" for="one-half">
             <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              We ask this to make sure we find the correct record.
+              You don't have to tell us your certificate number, but telling us can helps us find your certificate. You can find the number on the certificate.
             </div>
           </label>
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="one-half" name="one-half" type="text">
-        </div>
-        <a href="/v3/date-of-birth" class="nhsuk-button">
+          <div class="nhsuk-radios">
+        
+            <div class="nhsuk-radios__item">
+              <input class="nhsuk-radios__input" id="cert-number" name="yes" type="radio" value="yes">
+              <label class="nhsuk-label nhsuk-radios__label" for="example-1">
+                Yes
+              </label>
+            </div>
+      
+            <div class="nhsuk-radios__item">
+              <input class="nhsuk-radios__input" id="cert-number" name="no" type="radio" value="no">
+              <label class="nhsuk-label nhsuk-radios__label" for="example-2">
+                No
+              </label>
+            </div>
+      
+          </div>
+        </fieldset>
+      
+      </div>
+        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
-        </a>
-      </form>
+        </button>
+       </form>
 
     </div>
   </div>
