added postcodes to index and added in more routing

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -109,7 +109,13 @@
                  <hr>
                  <h3 class="nhsuk-heading-m">Hypothesis A</h3>
                  <p style="background: #DEE0E2; padding: 20px;">We are going to be testing this prototype with users. The design has been updated to be inline with GDS as well as the content which has been review by the content designer on our team.
+                  <br>Use postcode: NE1 3JA to get through the DWP journey</br>
+                  
                  </p>
+                 <br>Use postcode: NE1 3JA to get through the DWP journey</br>
+                 <br>Use postcode: NE2 4XL to get through the BSA journey</br>
+                 <br>Use postcode: WA4 1AB to get to we cannot find your details</br>
+                 <br>Use postcode: WAH 3BE to get to more information needed screen</br>
                  
                  
                  <a class="nhsuk-button" href="v3/respond-to-your-letter">Respond to your letter</a>
@@ -215,4 +221,12 @@
 
     </div>
   </div>
+  <style>
+  .nhsuk-button {
+   margin-top: 20px;
+  }
+  
+  
+  
+  </style>
 {% endblock %}
