--- a/app/views/v3/cannot-find-your-details.html
+++ b/app/views/v3/cannot-find-your-details.html
@@ -26,10 +26,8 @@
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-      <div class="nhsuk-hint" id="contact-hint">
-        Your details
-      </div>
-      <h1 class="nhsuk-u-margin-top-4">
+      <span class="nhsuk-caption-l">Your details</span>
+      <h1>
         We cannot find your details
       </h1>
     
@@ -98,12 +96,6 @@
     </div>
   </div>
   <style>
-   .nhsuk-u-margin-top-4 {
-     margin-top: 0px;
-     padding-top: 0px;
-      }
-      .nhsuk-hint {
-margin-bottom: 0px;
-}
+  
   </style>
 {% endblock %}
