--- a/app/views/v3/did-you-have-an-exemption.html
+++ b/app/views/v3/did-you-have-an-exemption.html
@@ -49,31 +49,56 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/v3/did-you-have-this-exemption" method="get" class="form">
+      <form action="nhs-exemption" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h2>Did you have a valid [Benefit] between 22 November 2019 and 30 November 2019?</h2>
+        <h2>Did you have one of these NHS exemption certificates between 1 November and 30 November 2017?</h2>
         <div class="nhsuk-form-group">
-
-         
-        
-            <div class="nhsuk-radios">
-        
-              <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="benefit-exemption" name="yes" type="radio" value="yes">
-                <label class="nhsuk-label nhsuk-radios__label" for="example-1">
-                  Yes
+          <div class="nhsuk-radios nhsuk-radios">
+            <div class="nhsuk-radios__item">
+                <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="med">
+                <label class="nhsuk-label nhsuk-radios__label" for="med">
+                  Medical exemption certificate
                 </label>
-              </div>
-        
-              <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="benefit-exemption" name="no" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="example-2">
-                  No
-                </label>
-              </div>
-        
             </div>
+            <div class="nhsuk-radios__item">
+              <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="mat">
+              <label class="nhsuk-label nhsuk-radios__label" for="mat">
+                Maternity exemption certificate
+              </label>
+          </div>
+          <div class="nhsuk-radios__item">
+            <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="ppc">
+            <label class="nhsuk-label nhsuk-radios__label" for="ppc">
+              Prescription Prepayment Certificate (PPC)
+            </label>
+        </div>
+        <div class="nhsuk-radios__item">
+          <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="hc2">
+          <label class="nhsuk-label nhsuk-radios__label" for="hc2">
+            HC2 certificate (full help with health costs)
+          </label>
+      </div>
+      <div class="nhsuk-radios__item">
+        <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="tc">
+        <label class="nhsuk-label nhsuk-radios__label" for="tc">
+          NHS Tax Credit Exemption Certificate
+        </label>
+    </div>
+    <div class="nhsuk-form-group">
+      <p>or</p>
+    </div>
+    <div class="nhsuk-radios__item">
+      <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="no">
+      <label class="nhsuk-label nhsuk-radios__label" for="no">
+        No, none of these
+      </label>
+  </div>
+
+        </div>
+         
+            
+
           </fieldset>
         
         </div>
