--- a/app/views/v3/did-you-have-this-exemption.html
+++ b/app/views/v3/did-you-have-this-exemption.html
@@ -49,31 +49,26 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/v3/did-you-have-this-exemption" method="get" class="form">
+      <form action="benefit-exemption" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h2>Did you have a valid [Benefit] between 22 November 2019 and 30 November 2019?</h2>
         <div class="nhsuk-form-group">
 
-         
-        
-            <div class="nhsuk-radios">
-        
-              <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="benefit-exemption" name="yes" type="radio" value="yes">
-                <label class="nhsuk-label nhsuk-radios__label" for="example-1">
-                  Yes
+          <div class="nhsuk-radios nhsuk-radios">
+            <div class="nhsuk-radios__item">
+                <input class="nhsuk-radios__input" id="benefit-exemption" name="exemption" type="radio" value="yes">
+                <label class="nhsuk-label nhsuk-radios__label" for="yes">
+                    Yes
                 </label>
-              </div>
-        
-              <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="benefit-exemption" name="no" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="example-2">
-                  No
-                </label>
-              </div>
-        
             </div>
+            <div class="nhsuk-radios__item">
+                <input class="nhsuk-radios__input" id="benefit-exemption" name="exemption" type="radio" value="no">
+                <label class="nhsuk-label nhsuk-radios__label" for="no">
+                    No
+                </label>
+            </div>
+        </div>
           </fieldset>
         
         </div>
