--- a/app/views/v3/enter-name.html
+++ b/app/views/v3/enter-name.html
@@ -48,33 +48,36 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="cert-number" method="get" class="form">
+      <form action="v3-postcode-input" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1>Do you know your [Benefit] number?</h1>
-        <div class="nhsuk-form-group">
-          <label class="nhsuk-label" for="one-half">
-            <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              You don't have to tell us your certificate number, but telling us can helps us find your certificate. You can find the number on the certificate.
-            </div>
-          </label>
-          <div class="nhsuk-radios nhsuk-radios">
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="cert-number" name="number" type="radio" value="yes">
-                <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                    Yes
-                </label>
-            </div>
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="cert-number" name="number" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="no">
-                    No
-                </label>
-            </div>
-        </div>
-        </fieldset>
-      
-      </div>
+        <h1>How was your name written on your [Benefit]?</h1>
+        <form action="v22/name" method="post">
+
+          <div class="nhsuk-form-group">
+              <label class="nhsuk-label" for="firstname">
+                  First name
+              </label>
+              <input class="nhsuk-input nhsuk-input--width-20" id="firstname" name="firstname" type="text" autocomplete="given-name">
+          </div>
+
+          <div class="nhsuk-form-group">
+              <label class="nhsuk-label" for="lastname">
+                  Last name
+              </label>
+              <input class="nhsuk-input nhsuk-input--width-20" id="lastname" name="lastname" type="text" autocomplete="family-name">
+          </div>
+
+
+                <details class="nhsuk-details">
+                      <summary class="nhsuk-details__summary">
+                        <span class="nhsuk-details__summary-text">
+                          Why we ask for your name
+                        </span>
+                      </summary>
+                     
+                    </details>
+
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
         </button>
