--- a/app/views/v3/enter-postcode.html
+++ b/app/views/v3/enter-postcode.html
@@ -55,7 +55,7 @@
         <div class="nhsuk-form-group">
           <label class="nhsuk-label" for="one-half">
             <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              For example WA4 1AB
+              For example, WA4 1AB
             </div>
           </label>
           <input class="nhsuk-input nhsuk-u-width-one-half" id="v3-postcode-input" name="postcode" type="text">
