--- a/app/views/v3/did-you-have-this-benefit.html
+++ b/app/views/v3/did-you-have-this-benefit.html
@@ -27,35 +27,35 @@
           "text": "Back",
           "classes": "nhsuk-u-margin-top-9 nhsuk-u-margin-bottom-20"
         }) }}
-        <div class="heading-group">
-          <p>Respond to your letter</p>
-          <h1 class="nhsuk-heading-l">[Benefit] between 1 November and 30 November 2017?</h1>
+        
+        <form action="benefit-between" method="get" class="form">
+      
+        <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h2>[Benefit] between 1 November and 30 November 2017?</h2>
+        <div class="nhsuk-form-group">
+
+          <div class="nhsuk-radios nhsuk-radios">
+            <div class="nhsuk-radios__item">
+                <input class="nhsuk-radios__input" id="benefit-between" name="benefit" type="radio" value="yes">
+                <label class="nhsuk-label nhsuk-radios__label" for="yes">
+                    Yes
+                </label>
+            </div>
+            <div class="nhsuk-radios__item">
+                <input class="nhsuk-radios__input" id="benefit-between" name="benefit" type="radio" value="no">
+                <label class="nhsuk-label nhsuk-radios__label" for="no">
+                    No
+                </label>
+            </div>
         </div>
-        <form action="/v1/check-name" method="post" class="form"></form>
-      
-          <div class="nhsuk-radios nhsuk-radios--inline">
-      
-            <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="example-inline-1" name="example-inline" type="radio" value="yes">
-              <label class="nhsuk-label nhsuk-radios__label" for="example-inline-1">
-                Yes
-              </label>
-            </div>
-      
-            <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="example-inline-2" name="example-inline" type="radio" value="no">
-              <label class="nhsuk-label nhsuk-radios__label" for="example-inline-2">
-                No
-              </label>
-            </div>
-      
-          </div>
         </fieldset>
       
       </div>
-      <a href="/v1/check-name" class="nhsuk-button">
-       Next
-      </a>
+      <div class="nhsuk-form-group">
+        <button class="nhsuk-button" type="submit">
+         Continue
+        </button>
+        </div>
   
             <p class="navigation"><a class="cancel" href="start">Cancel</a></p>
   
