more journey added

--- a/app/views/v3/check-dob.html
+++ b/app/views/v3/check-dob.html
@@ -49,21 +49,21 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="check-name-input" method="get" class="form">
+      <form action="check-dob-input" method="get" class="form">
 
-        <span class="nhsuk-caption-l">Challenge an enquiry letter</span>
-        <h1 class="nhsuk-heading-xl">Is this how your name was written on you [Benefit]?</h1>
+        <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h1 class="nhsuk-heading-xl">Is this your date of birth?</h1>
         <div class="nhsuk-form-group">
-<p>Michelle doe</p>
+<p>21 December 1985</p>
           <div class="nhsuk-radios nhsuk-radios">
             <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="yes">
+                <input class="nhsuk-radios__input" id="check-dob-input" name="dob" type="radio" value="yes">
                 <label class="nhsuk-label nhsuk-radios__label" for="yes">
                     Yes
                 </label>
             </div>
             <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="no">
+                <input class="nhsuk-radios__input" id="check-dob-input" name="dob" type="radio" value="no">
                 <label class="nhsuk-label nhsuk-radios__label" for="no">
                     No
                 </label>
