--- a/app/views/v3/did-you-have-an-exemption.html
+++ b/app/views/v3/did-you-have-an-exemption.html
@@ -52,7 +52,7 @@
       <form action="nhs-exemption" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h2>Did you have one of these NHS exemption certificates between 1 November and 30 November 2017?</h2>
+        <h1 class="nhsuk-heading-l">Did you have one of these NHS exemption certificates between 1 November and 30 November 2017?</h1>
         <div class="nhsuk-form-group">
           <div class="nhsuk-radios nhsuk-radios">
             <div class="nhsuk-radios__item">
