--- a/app/views/v3/did-you-have-this-benefit.html
+++ b/app/views/v3/did-you-have-this-benefit.html
@@ -31,7 +31,7 @@
         <form action="benefit-between" method="get" class="form">
       
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h2>[Benefit] between 1 November and 30 November 2017?</h2>
+        <h1 class="nhsuk-heading-l">[Benefit] between 1 November and 30 November 2017?</h1>
         <div class="nhsuk-form-group">
 
           <div class="nhsuk-radios nhsuk-radios">
