--- a/app/views/v3/check-address.html
+++ b/app/views/v3/check-address.html
@@ -49,21 +49,21 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="check-name-input" method="get" class="form">
+      <form action="check-address-input" method="get" class="form">
 
         <span class="nhsuk-caption-l">Challenge an enquiry letter</span>
-        <h1 class="nhsuk-heading-xl">Is this how your name was written on you [Benefit]?</h1>
+        <h1 class="nhsuk-heading-xl">Was this your address when you had [Benefit]?</h1>
         <div class="nhsuk-form-group">
-<p>Michelle doe</p>
+<p>12 Old Oak Road, Throckley, NE67 9AD</p>
           <div class="nhsuk-radios nhsuk-radios">
             <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="yes">
+                <input class="nhsuk-radios__input" id="check-address-input" name="address" type="radio" value="yes">
                 <label class="nhsuk-label nhsuk-radios__label" for="yes">
                     Yes
                 </label>
             </div>
             <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="no">
+                <input class="nhsuk-radios__input" id="check-address-input" name="address" type="radio" value="no">
                 <label class="nhsuk-label nhsuk-radios__label" for="no">
                     No
                 </label>
