--- a/app/views/v3/check-personal-details.html
+++ b/app/views/v3/check-personal-details.html
@@ -51,24 +51,76 @@
 
       <form action="check-name-input" method="get" class="form">
 
-        <span class="nhsuk-caption-l">Challenge an enquiry letter</span>
-        <h1 class="nhsuk-heading-xl">Is this how your name was written on you [Benefit]?</h1>
-        <div class="nhsuk-form-group">
-<p>Michelle doe</p>
-          <div class="nhsuk-radios nhsuk-radios">
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="yes">
-                <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                    Yes
-                </label>
-            </div>
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="no">
-                    No
-                </label>
-            </div>
-        </div>
+        <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h1 class="nhsuk-heading-xl">Check your personal details are correct</h1>
+        
+        <dl class="nhsuk-summary-list">
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Name
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              Michelle Doe
+            </dd>
+        
+            <dd class="nhsuk-summary-list__actions">
+        
+              <a href="/v3/update-name">
+                Change<span class="nhsuk-u-visually-hidden"> name</span>
+              </a>
+        
+            </dd>
+        
+          </div>
+        
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Date of birth
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              21 December 1985
+            </dd>
+        
+            <dd class="nhsuk-summary-list__actions">
+        
+              <a href="/v3/update-dob">
+                Change<span class="nhsuk-u-visually-hidden"> date of birth</span>
+              </a>
+        
+            </dd>
+        
+          </div>
+        
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Address
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              12 Old Oak Road<br>Throckley<br> NE67 9AD
+            </dd>
+        
+            <dd class="nhsuk-summary-list__actions">
+        
+              <a href="/v3/update-address">
+                Change<span class="nhsuk-u-visually-hidden"> address</span>
+              </a>
+        
+            </dd>
+        
+          </div>
+        
+          
+        
+          </div>
+        
+        </dl>
+
+
+
+
+
+
           </fieldset>
         
         </div>
