--- a/app/views/v3/update-dob.html
+++ b/app/views/v3/update-dob.html
@@ -49,29 +49,40 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="check-name-input" method="get" class="form">
+      <form action="/v3/check-address" method="post" class="form">
 
-        <span class="nhsuk-caption-l">Challenge an enquiry letter</span>
-        <h1 class="nhsuk-heading-xl">Is this how your name was written on you [Benefit]?</h1>
-        <div class="nhsuk-form-group">
-<p>Michelle doe</p>
-          <div class="nhsuk-radios nhsuk-radios">
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="yes">
-                <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                    Yes
-                </label>
-            </div>
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="no">
-                    No
-                </label>
-            </div>
+        <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h1>What your date of birth?</h1>
+        <div class="nhsuk-hint" id="example-hint">
+          For example, 31 3 1980
         </div>
-          </fieldset>
+    
+        <div class="nhsuk-date-input" id="example">
+          <div class="nhsuk-date-input__item">
+            <div class="nhsuk-form-group">
+              <label class="nhsuk-label nhsuk-date-input__label" for="day">
+                Day
+              </label>
+              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="day" name="day" type="text" pattern="[0-9]*" inputmode="numeric">
+            </div>
+          </div>
+          <div class="nhsuk-date-input__item">
+            <div class="nhsuk-form-group">
+              <label class="nhsuk-label nhsuk-date-input__label" for="month">
+                Month
+              </label>
+              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="month" name="month" type="text" pattern="[0-9]*" inputmode="numeric">
+            </div>
+          </div>
+          <div class="nhsuk-date-input__item">
+            <div class="nhsuk-form-group">
+              <label class="nhsuk-label nhsuk-date-input__label" for="year">
+                Year
+              </label>
+              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="year" name="year" type="text" pattern="[0-9]*" inputmode="numeric">
+            </div>
+          </div>
         
-        </div>
     <div class="nhsuk-form-group">
     <button class="nhsuk-button" type="submit">
      Continue
