--- a/app/views/v3/update-name.html
+++ b/app/views/v3/update-name.html
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block outerContent %}
-
+  
 {% endblock %}
 
 {% block content %}
@@ -39,47 +39,42 @@
    </p>
  </div>
 <div class="nhsuk-back-link">
-<a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
-  <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
-    <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
-  </svg>
-  Go back</a>
-</div>
-
+  <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
+    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
+      <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
+    </svg>
+    Go back</a>
+  </div>
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="check-name-input" method="get" class="form">
+      <form action="check-dob" method="post" class="form">
 
-        <span class="nhsuk-caption-l">Challenge an enquiry letter</span>
-        <h1 class="nhsuk-heading-xl">Is this how your name was written on you [Benefit]?</h1>
-        <div class="nhsuk-form-group">
-<p>Michelle doe</p>
-          <div class="nhsuk-radios nhsuk-radios">
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="yes">
-                <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                    Yes
-                </label>
-            </div>
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="no">
-                    No
-                </label>
-            </div>
-        </div>
-          </fieldset>
-        
-        </div>
-    <div class="nhsuk-form-group">
-    <button class="nhsuk-button" type="submit">
-     Continue
-    </button>
-    </div>
+        <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h1>How was your name written on your [Benefit]?</h1>
+        <form action="v22/name" method="post">
 
-        
-   
+          <div class="nhsuk-form-group">
+              <label class="nhsuk-label" for="firstname">
+                  First name
+              </label>
+              <input class="nhsuk-input nhsuk-input--width-20" id="firstname" name="firstname" type="text" autocomplete="given-name">
+          </div>
+
+          <div class="nhsuk-form-group">
+              <label class="nhsuk-label" for="lastname">
+                  Last name
+              </label>
+              <input class="nhsuk-input nhsuk-input--width-20" id="lastname" name="lastname" type="text" autocomplete="family-name">
+          </div>
+
+
+                
+
+        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+          Continue
+        </button>
+       </form>
 
     </div>
   </div>
