--- a/app/views/v3/were-you-claiming-any-benefits.html
+++ b/app/views/v3/were-you-claiming-any-benefits.html
@@ -52,7 +52,7 @@
       <form action="other-exemption" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h2>Were you claiming any of these benefits (or named on them) between 18 November 2019 and 30 November 2019?</h2>
+        <h1 class="nhsuk-heading-l">Were you claiming any of these benefits (or named on them) between 18 November 2019 and 30 November 2019?</h1>
         <div class="nhsuk-form-group">
           <div class="nhsuk-radios nhsuk-radios">
             <div class="nhsuk-radios__item">
