--- a/app/views/v3/enter-exemption-certificate-number.html
+++ b/app/views/v3/enter-exemption-certificate-number.html
@@ -48,15 +48,13 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="v3-postcode-input" method="get" class="form">
+      <form action="certificate-number-input" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1>What is your [Benefit] number?</h1>
         <div class="nhsuk-form-group">
-          <label class="nhsuk-label" for="one-half">
-            
-          </label>
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="exemption-cert-number" name="number" type="text">
+          
+          <input class="nhsuk-input nhsuk-u-width-one-half" id="cert-number-input" name="certificatenumber" type="text">
         </div>
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
