more information needed and we need proof screen

--- a/app/views/v3/check-name.html
+++ b/app/views/v3/check-name.html
@@ -52,9 +52,9 @@
       <form action="check-name-input" method="get" class="form">
 
         <span class="nhsuk-caption-l">Challenge an enquiry letter</span>
-        <h1 class="nhsuk-heading-xl">Is this how your name was written on you [Benefit]?</h1>
+        <h1 class="nhsuk-heading-xl">Is this how your name was written on your [Benefit]?</h1>
         <div class="nhsuk-form-group">
-<p>Michelle doe</p>
+<p>Michelle Doe</p>
           <div class="nhsuk-radios nhsuk-radios">
             <div class="nhsuk-radios__item">
                 <input class="nhsuk-radios__input" id="check-name-input" name="name" type="radio" value="yes">
