--- a/app/views/v3/check-personal-details.html
+++ b/app/views/v3/check-personal-details.html
@@ -49,7 +49,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="check-name-input" method="get" class="form">
+      <form action="confirmation-page" method="post" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1 class="nhsuk-heading-xl">Check your personal details are correct</h1>
