--- a/app/views/v3/confirmation-page.html
+++ b/app/views/v3/confirmation-page.html
@@ -22,6 +22,23 @@
 {% endblock %}
 
 {% block content %}
+<div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
+  <p class="nhsuk-phase-banner__content">
+    <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
+      BETA
+     </strong>
+     <span class="nhsuk-phase-banner__text">
+       This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
+    </span>
+   </p>
+ </div>
+<div class="nhsuk-back-link">
+<a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
+  <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
+    <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
+  </svg>
+  Go back</a>
+</div>
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       <div class="nhsuk-card" style="background: #005EB8; margin-top: 0;">
@@ -30,37 +47,39 @@
            An exemption has been found
           </h1>
           
+          <h2 class="nhsuk-card__content" style="text-align: center; color: white;">Your case has now been closed.</h2>
           
           
-          <h3 class="nhsuk-card__heading nhsuk-u-font-weight-normal" style="text-align: center; color: white;">
-            Reference number: <span class="nhsuk-caption-xl nhsuk-caption--bottom nhsuk-u-font-weight-bold" style="color: white;">7898787887</span>
-          </h3>
+          
         </div>
       </div>
      </div>
 
       </div>
 
-      <p>Your case has been closed. You do not need to do anything else.</p>
+      <p>We have matched an exemption based on the details you have given.</p>
 
+      
+
+      <p>Michelle Doe</p>
+      <p>Reference number: 01234567890</p>
       <h2>How to avoid a future enquiry letter</h2>
-
-      <p>To avoid a future enquiry make sure your details are correct at your:</p>
+      <p>We match exemptions using a combination of your:</p>
       <ul>
-        <li>GP surgery</li>
-        <li>dental practice</li>
-        <li>benefits organisations</li>
+        <li>name</li>
+        <li>address</li>
+        <li>date of birth</li>
+        <li>NHS number</li>
       </ul> 
-        <p>If any of your details are not up to date, you may receive another enquiry letter in the future.</p>
-     
-        <p>If you are in receipt of <a href="">Universal Credit</a>, your entitlement to free NHS prescriptions and dental treatment depends on your earnings for the most recent assessment period.
-        </p>
+        <p>Make sure these are correct at your GP surgery, dental practice, and any benefits organisations.</p>
+     <p>If any of your details are not up to date, you may receive another enquiry letter in the future.</p>
+        
         <p> <a href="">Check if you are currently entitled to help with your health costs.</a></p>
-
+        <p><a href="">Print this page</a></p>
 <h3>Feedback</h3>
 <p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service.</p>
-<a href="">Leave feedback</a>
-      <p>Go back to <a href="/page-templates"><a>.</p>
+<p><a href="">Leave feedback</a></p>
+   
 
     </div>
   </div>
