what is date of birth change

--- a/app/views/v3/date-of-birth.html
+++ b/app/views/v3/date-of-birth.html
@@ -52,7 +52,7 @@
       <form action="/v3/enter-postcode" method="post" class="form">
 
         <span class="nhsuk-caption-l">Your details</span>
-        <h1>What your date of birth?</h1>
+        <h1>What is your date of birth?</h1>
         <div class="nhsuk-hint" id="example-hint">
           For example, 31 3 1980
         </div>
