we need proof page update

--- a/app/views/v3/we-need-proof.html
+++ b/app/views/v3/we-need-proof.html
@@ -53,8 +53,7 @@
       <p>We need one example of proof from the following list. Your proof must have been valid at the time you claimed a free NHS prescription.</p>
       <p>Select the reason you were entitled to help with your health costs to see what you need to send:</p>
       <p>You were getting a benefit that entitles you to help</p>
-
-      <details class="nhsuk-details nhsuk-expander">
+      <details class="nhsuk-details">
         <summary class="nhsuk-details__summary">
           <span class="nhsuk-details__summary-text">
             Income-based Jobseeker's Allowance (JSA)
@@ -65,7 +64,19 @@
           <p>Income Support or income-related Employment and Support Allowance (ESA)</p>
           <p>A clear image of every page of your Income Support or ESA award letter.</p>
           <p>If you’re sending an image of your ESA award letter it needs to show that you receive income-related ESA.</p>
+        </div>
       </details>
+      <details class="nhsuk-details">
+        <summary class="nhsuk-details__summary">
+          <span class="nhsuk-details__summary-text">
+            Pension Credit Guarantee Credit
+          </span>
+        </summary>
+        <div class="nhsuk-details__text">
+          <p>A clear image of you or your partner's Pension Credit Guarantee Credit award letter.</p>
+        </div>
+      </details>
+     
       <details class="nhsuk-details nhsuk-expander">
         <summary class="nhsuk-details__summary">
           <span class="nhsuk-details__summary-text">
