--- a/app/views/v3/we-need-proof.html
+++ b/app/views/v3/we-need-proof.html
@@ -76,22 +76,10 @@
           <p>A clear image of you or your partner's Pension Credit Guarantee Credit award letter.</p>
         </div>
       </details>
-     
-      <details class="nhsuk-details nhsuk-expander">
-        <summary class="nhsuk-details__summary">
-          <span class="nhsuk-details__summary-text">
-            Pension Credit Guarantee Credit
-          </span>
-        </summary>
-        <div class="nhsuk-details__text">
-          <p>A clear image of you or your partner's Pension Credit Guarantee Credit award letter.</p>
-         
-      </details>
-      <details class="nhsuk-details nhsuk-expander">
+      <details class="nhsuk-details">
         <summary class="nhsuk-details__summary">
           <span class="nhsuk-details__summary-text">
             Universal Credit
-          </span>
         </summary>
         <div class="nhsuk-details__text">
           <p>A clear image of every page of your Universal Credit letter or statement.</p>
@@ -104,7 +92,10 @@
          <p>'Most recent assessment period' means the assessment period that ended immediately before the date you claimed free NHS prescriptions. It runs for a calendar month.</p>
          <p>If you claim Universal Credit as a couple, the earnings limit applies to the joint income of you and your partner.</p>
 
+        </div>
       </details>
+
+
       
       <p>You are entitled to free NHS prescriptions if you have a valid:</p>
       <ul>
