updates to index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -97,7 +97,50 @@
             <div class="nhsuk-grid-column-three-thirds">
       <details class="nhsuk-details nhsuk-expander" nhsuk-polyfilled="true" id="nhsuk-details3">
         <summary class="nhsuk-details__summary" role="button" aria-controls="nhsuk-details__text3" tabindex="0" aria-expanded="false">
-           <span class="nhsuk-details__summary-text">Private Beta (sprint 3)</span>
+           <span class="nhsuk-details__summary-text">Private Beta version 4 (6/3/2023)</span>
+        </summary>
+        <div class="nhsuk-details__text" id="nhsuk-details__text3" aria-hidden="true">
+           <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-0" nhsuk-polyfilled="true" id="nhsuk-details4">
+              <summary class="nhsuk-details__summary" role="button" aria-controls="nhsuk-details__text4" tabindex="0" aria-expanded="false">
+                 <span class="nhsuk-details__summary-text"><small>Version 4</small></span>
+              </summary>
+             
+                 </details>
+                 <hr>
+                 <h3 class="nhsuk-heading-m">Hypothesis A</h3>
+                 <p style="background: #DEE0E2; padding: 20px;">We are going to be testing this prototype with users. The design has been updated to be inline with GDS as well as the content which has been review by the content designer on our team.
+                  
+                  
+                 </p>
+                 <br>Use postcode: NE1 3JA to get through the DWP journey</br>
+                 <br>Use postcode: NE2 4XL to get through the BSA journey</br>
+                 <br>Use postcode: WA4 1AB to get to we cannot find your details</br>
+                 
+                 
+                 
+                 <a class="nhsuk-button" href="v4/respond-to-your-letter">Respond to your letter</a>
+                 
+
+                 <div class="nhsuk-action-link nhsuk-u-margin-bottom-3">
+                    <a class="nhsuk-action-link__link" href="v3/respond-to-your-letter>
+                       <svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__arrow-right-circle" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M0 0h24v24H0z" fill="none"></path>
+                          <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z">
+                          </path>
+                       </svg>
+                       <span class="nhsuk-action-link__text">View user journey (v4)</span>
+                    </a>
+                 </div>
+              </div>
+           </details>
+        </div>
+     </details>
+     </div>
+          <div class="nhsuk-grid-row">
+            <div class="nhsuk-grid-column-three-thirds">
+      <details class="nhsuk-details nhsuk-expander" nhsuk-polyfilled="true" id="nhsuk-details3">
+        <summary class="nhsuk-details__summary" role="button" aria-controls="nhsuk-details__text3" tabindex="0" aria-expanded="false">
+           <span class="nhsuk-details__summary-text">Private Beta version 3 (27/2/2023)</span>
         </summary>
         <div class="nhsuk-details__text" id="nhsuk-details__text3" aria-hidden="true">
            <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-0" nhsuk-polyfilled="true" id="nhsuk-details4">
@@ -116,13 +159,35 @@
                  <br>Use postcode: NE2 4XL to get through the BSA journey</br>
                  <br>Use postcode: WA4 1AB to get to we cannot find your details</br>
                  
-                 
+                 <hr>
+                     
+                     <h3 class="nhsuk-heading-m">What we created:</h3>
+                     <ul class="nhsuk-list nhsuk-list--bullet">
+                        <li>We updated the challenge journey with the new NHS toolkit, removing old components that weren't inline with GDS. We have done a content review and placed in content to keep inline with GDS.
+                           We have removed an error screen from the journey as it was deemed unessescary and added a screen around the benefit number.
+                        </li>
+                     </ul>
+                     <h3 class="nhsuk-heading-m">What we plan to test:</h3>
+                     <ul class="nhsuk-list nhsuk-list--bullet">
+                        <li>We plan to test the whole journey to get feedback on the pages</li>
+                        <li>We want to focus on the "respond to your letter page", the kickout screens, confirmation page and the "enquiry letter details" screen</li>
+                     </ul>
+                     <h3 class="nhsuk-heading-m">What we found:</h3>
+                     <ul class="nhsuk-list nhsuk-list--bullet">
+                        <li>...</li>
+                     </ul>
+                     <h3 class="nhsuk-heading-m">Any known issues?</h3>
+                     <ul class="nhsuk-list nhsuk-list--bullet">
+                        <li>...</li>
+                     </ul>
+                     <hr>
+
                  
                  <a class="nhsuk-button" href="v3/respond-to-your-letter">Respond to your letter</a>
                  
 
                  <div class="nhsuk-action-link nhsuk-u-margin-bottom-3">
-                    <a class="nhsuk-action-link__link" href="v3/respond-to-your-letter>
+                    <a class="nhsuk-action-link__link" href="v3/user-journey-3">
                        <svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__arrow-right-circle" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                           <path d="M0 0h24v24H0z" fill="none"></path>
                           <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z">
@@ -140,7 +205,7 @@
             <div class="nhsuk-grid-column-three-thirds">
       <details class="nhsuk-details nhsuk-expander" nhsuk-polyfilled="true" id="nhsuk-details3">
         <summary class="nhsuk-details__summary" role="button" aria-controls="nhsuk-details__text3" tabindex="0" aria-expanded="false">
-           <span class="nhsuk-details__summary-text">Private Beta (sprint 2)</span>
+           <span class="nhsuk-details__summary-text">Private Beta version 2 ()</span>
         </summary>
         <div class="nhsuk-details__text" id="nhsuk-details__text3" aria-hidden="true">
            <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-0" nhsuk-polyfilled="true" id="nhsuk-details4">
