--- a/app/views/v3/update-dob.html
+++ b/app/views/v3/update-dob.html
@@ -52,7 +52,7 @@
       <form action="/v3/check-address" method="post" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1>What your date of birth?</h1>
+        <h1>What is your date of birth?</h1>
         <div class="nhsuk-hint" id="example-hint">
           For example, 31 3 1980
         </div>
