--- a/app/views/v4/cannot-find-your-details.html
+++ b/app/views/v4/cannot-find-your-details.html
@@ -5,7 +5,7 @@
 {% block pageTitle %}
 <header class="nhsuk-header nhsuk-header--transactional" role="banner">
   <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
+    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/v4/respond-to-your-letter" aria-label="NHS homepage">
 
         <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
           <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
@@ -15,7 +15,7 @@
       </a>
     </div>
     <div class="nhsuk-header__transactional-service-name">
-      <a class="nhsuk-header__transactional-service-name--link" href="/v3/respond-to-your-letter">Respond to your letter</a>
+      <a class="nhsuk-header__transactional-service-name--link" href="/v4/respond-to-your-letter">Respond to your letter</a>
     </div>
 
   </div>
@@ -43,7 +43,7 @@
       
           <dd class="nhsuk-summary-list__actions">
       
-            <a href="/v3/enter-reference-number">
+            <a href="/v4/enter-reference-number">
               Change<span class="nhsuk-u-visually-hidden"> reference number</span>
             </a>
       
@@ -61,7 +61,7 @@
       
           <dd class="nhsuk-summary-list__actions">
       
-            <a href="/v3/date-of-birth">
+            <a href="/v4/date-of-birth">
               Change<span class="nhsuk-u-visually-hidden"> date of birth</span>
             </a>
       
@@ -79,7 +79,7 @@
       
           <dd class="nhsuk-summary-list__actions">
       
-            <a href="/v3/enter-postcode">
+            <a href="/v4/enter-postcode">
               Change<span class="nhsuk-u-visually-hidden"> Postcode</span>
             </a>
       
