--- a/app/views/v4/did-you-have-an-exemption.html
+++ b/app/views/v4/did-you-have-an-exemption.html
@@ -15,7 +15,7 @@
       </a>
     </div>
     <div class="nhsuk-header__transactional-service-name">
-      <a class="nhsuk-header__transactional-service-name--link" href="/v3/respond-to-your-letter">Respond to your letter</a>
+      <a class="nhsuk-header__transactional-service-name--link" href="/v4/respond-to-your-letter">Respond to your letter</a>
     </div>
 
   </div>
@@ -49,38 +49,38 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="nhs-exemption" method="get" class="form">
+      <form action="version4-nhs" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1 class="nhsuk-heading-l">Did you have one of these NHS exemption certificates between 1 November and 30 November 2017?</h1>
         <div class="nhsuk-form-group">
           <div class="nhsuk-radios nhsuk-radios">
             <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="med">
+                <input class="nhsuk-radios__input" id="version4-nhs" name="nhs" type="radio" value="med">
                 <label class="nhsuk-label nhsuk-radios__label" for="med">
                   Medical exemption certificate
                 </label>
             </div>
             <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="mat">
+              <input class="nhsuk-radios__input" id="version4-nhs" name="nhs" type="radio" value="mat">
               <label class="nhsuk-label nhsuk-radios__label" for="mat">
                 Maternity exemption certificate
               </label>
           </div>
           <div class="nhsuk-radios__item">
-            <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="ppc">
+            <input class="nhsuk-radios__input" id="version4-nhs" name="nhs" type="radio" value="ppc">
             <label class="nhsuk-label nhsuk-radios__label" for="ppc">
               Prescription Prepayment Certificate (PPC)
             </label>
         </div>
         <div class="nhsuk-radios__item">
-          <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="hc2">
+          <input class="nhsuk-radios__input" id="version4-nhs" name="nhs" type="radio" value="hc2">
           <label class="nhsuk-label nhsuk-radios__label" for="hc2">
             HC2 certificate (full help with health costs)
           </label>
       </div>
       <div class="nhsuk-radios__item">
-        <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="tc">
+        <input class="nhsuk-radios__input" id="version4-nhs" name="nhs" type="radio" value="tc">
         <label class="nhsuk-label nhsuk-radios__label" for="tc">
           NHS Tax Credit Exemption Certificate
         </label>
@@ -89,7 +89,7 @@
       <p>or</p>
     </div>
     <div class="nhsuk-radios__item">
-      <input class="nhsuk-radios__input" id="nhs-exemption" name="nhs" type="radio" value="no">
+      <input class="nhsuk-radios__input" id="version4-nhs" name="nhs" type="radio" value="no">
       <label class="nhsuk-label nhsuk-radios__label" for="no">
         No, none of these
       </label>
