--- a/app/views/v4/did-you-have-this-benefit.html
+++ b/app/views/v4/did-you-have-this-benefit.html
@@ -28,7 +28,7 @@
           "classes": "nhsuk-u-margin-top-9 nhsuk-u-margin-bottom-20"
         }) }}
         
-        <form action="benefit-between" method="get" class="form">
+        <form action="version4-benefit" method="get" class="form">
       
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1 class="nhsuk-heading-l">[Benefit] between 1 November and 30 November 2017?</h1>
@@ -36,13 +36,13 @@
 
           <div class="nhsuk-radios nhsuk-radios">
             <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="benefit-between" name="benefit" type="radio" value="yes">
+                <input class="nhsuk-radios__input" id="version4-benefit" name="benefit4" type="radio" value="yes">
                 <label class="nhsuk-label nhsuk-radios__label" for="yes">
                     Yes
                 </label>
             </div>
             <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="benefit-between" name="benefit" type="radio" value="no">
+                <input class="nhsuk-radios__input" id="version4-benefit" name="benefit4" type="radio" value="no">
                 <label class="nhsuk-label nhsuk-radios__label" for="no">
                     No
                 </label>
