--- a/app/views/v4/user-journey-4.html
+++ b/app/views/v4/user-journey-4.html
@@ -1,7 +1,5 @@
 {% extends 'layout.html' %}
 
-{% set mainClasses = "nhsuk-main-wrapper--s" %}
-
 {% block pageTitle %}
 <header class="nhsuk-header nhsuk-header--transactional" role="banner">
   <div class="nhsuk-width-container nhsuk-header__container">
@@ -23,37 +21,27 @@
 </header>
 {% endblock %}
 
+
+
+
 {% block content %}
-<div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
-  <p class="nhsuk-phase-banner__content">
-    <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
-      BETA
-     </strong>
-     <span class="nhsuk-phase-banner__text">
-       This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
-    </span>
-   </p>
- </div>
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-full">
+    <div class="nhsuk-back-link">
+<a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
+<svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
+  <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
+</svg>
+Go back</a>
+</div>
 
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
-      
-      <h1 class="nhsuk-heading-l">
-        More information needed
-      </h1>
-    
-
-      <p>We have been unable to confirm your identity using the information you’ve provided.</p>
-      <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have received a letter</a>.</p>
-      
-      <h3>Feedback</h3>
-      <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-      <p><a href="">Leave feedback</a></p>
-           
-    </div>
+    <h2>Challenge journey v4<span class="nhsuk-caption-l nhsuk-caption--bottom"></span></h2>
+      <div class="u-ratio u-ratio--16x9">
+        <iframe width="768" height="432" src="https://miro.com/app/live-embed/uXjVPi4W8LE=/?moveToViewport=-10951,-7836,24377,12741&embedId=609313776272" frameborder="0" scrolling="no" allow="fullscreen; clipboard-read; clipboard-write" allowfullscreen></iframe>
+      </div>
+      <p class="nhsuk-u-margin-top-6">Use the plus and minus to zoom.</p>
+      <p>You can make the map full screen by using the arrows, use <kbd>Esc</kbd> (the escape key) to exit the full screen view.</p>
   </div>
-
-  <style>
-  
-  </style>
+</div>
+  </div>
 {% endblock %}
