added pay option to enquiry journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -112,14 +112,15 @@
                   
                   
                  </p>
-                 <br>Use postcode: NE1 3JA to get through the DWP journey</br>
+                 <br>Use postcode: NE1 3JA to get through the DWP journey with pay or confirm added screen</br>
                  <br>Use postcode: NE2 4XL to get through the BSA journey</br>
                  <br>Use postcode: WA4 1AB to get to we cannot find your details</br>
                  
                  
                  
-                 <a class="nhsuk-button" href="v4/respond-to-your-letter">Respond to your letter</a>
                  
+                 <a class="nhsuk-button" href="v4/respond-to-your-letter">Respond to your letter pay or confirm</a>
+                 <a class="nhsuk-button" href="v4/respond-to-your-letter">Respond to your letter added paragraph</a>
 
                  <div class="nhsuk-action-link nhsuk-u-margin-bottom-3">
                     <a class="nhsuk-action-link__link" href="v4/user-journey-4">
