--- a/app/views/v4/enquiry-letter-details.html
+++ b/app/views/v4/enquiry-letter-details.html
@@ -51,9 +51,9 @@
       </div>
      
     
-       <h3>Check your details carefully</h3>
+       <h2>Check your details carefully</h2>
 
-       <p>We use the information you provide to help us match your details. You can find out more about <a href="">how we use your information</a>.</p>
+       <p>We check details on your prescription match the details on your exemption certificate, qualifying benefit, or prepayment certificate.</p>
       <p>We have not been able to confirm you were entitled to free NHS prescriptions using these details.</p>
       <dl class="nhsuk-summary-list">
 
@@ -106,7 +106,7 @@
     </div>
    
   </div>
-  <a href="/v4/what-happens-next" class="nhsuk-button">
+  <a href="/v4/what-you-need-to-do-next" class="nhsuk-button">
     Continue
   </a>
 {% endblock %}
